# labo

./: CMakeCache.txt  CMakeLists.txt  Channel.cpp  Common.h  Decoder.cpp  Encoder.cpp  lib.h  main.cpp  main.h
lib/: Analysor.h  Channel.h  Common.h  Decoder.h  Encoder.h  Logger.h  Params.h  Performance.h  Preseter.h
log/: all_log  gnuparameta  log_blockerr_vs_rate  output_log  symmetric_capacity
save_b/N_16/: Bloop_100  Bloop_1000
save_b/N_4/: Bloop_100
save_b/N_8/: Bloop_10  Bloop_100  Bloop_15
src/: Analysor.cpp  Channel.cpp  Common.cpp  Decoder.cpp  Encoder.cpp  Logger.cpp  MT.cpp  Params.cpp  Performance.cpp  Preseter.cpp  main.cpp
